fixed flash messages not closing, replacing some bs attributes and fixed the topbar's alignment

--- a/app/javascript/frontend/styles/_bootstrap_overrides.scss
+++ b/app/javascript/frontend/styles/_bootstrap_overrides.scss
@@ -25,5 +25,9 @@ a {
 }
 
 .navbar-brand {
-    font-size: 1.5rem;
+  font-size: 1.5rem;
+}
+
+#topbar {
+  width: 100% !important;
 }
